
* Improved "hasCount" description.

* "instanceOf" now guards against nil being passed as the expected type.

* Improved "hasEntry" description.

* Improved "hasKey" description.

* Improved "hasValue" description.

* Improved "closeTo" mismatch description.

* Improved "lessThanOrEqualTo" description.


== Version 1.2 ==

03 Jan 2011
* New matchers:
  - "hasCount" matches collections for which -count satisfies a given matcher.
  - "hasCountOf" matches collections for which -count equals a given count.
  - "empty" matches empty collection.

* Fixed assertThat to describe the diagnosis of the mismatch, not just the mismatched value.

* Expanded helper class HCInvocationMatcher:
  - New property "shortMismatchDescription" determines whether mismatch description is short or long. Default is long description.
  - New method -invokeOn: invokes stored invocation on given item.

* Since nil cannot be directly stored in collections, collection matchers now guard against nil.

* Expanded BaseDescription's -appendDescriptionOf: to handle all types of values, not just self-describing values.

* Deprecated:
  - Description's -appendValue: no longer needed; call -appendDescriptionOf: instead. This also means NSObject+SelfDescribingValue is no longer needed.
  - Renamed HCInvocation's helper class method +createInvocationForSelector:onClass: to +invocationForSelector:onClass:
  - New helper function HCRequireNonNilObject should be used in place of HCRequireNonNilString.


== Version 1.1.2 ==

28 Dec 2010
* New matchers:
  - "contains" matches collection containing matching items in order.
  - "containsInAnyOrder" matches collection containing matching items in any order.

* Fixed crash that occurred when trying to describe the matchers allOf, anyOf and isIn on iOS. Related to -ObjC linker flag.

* Changed documentation from HTML to Xcode documentation set. Run "make install" from the Documentation folder to install.
