@@ -24,6 +24,7 @@
 
 @end
 
+//--------------------------------------------------------------------------------------------------
 
 /**
     Is the argument a number close to a value, within some delta?
