@@ -80,6 +80,7 @@
 
 @end
 
+//--------------------------------------------------------------------------------------------------
 
 OBJC_EXPORT id<HCMatcher> HC_greaterThan(id aValue)
 {
