@@ -24,6 +24,7 @@
 
 @end
 
+//--------------------------------------------------------------------------------------------------
 
 /**
     Tests if a string is equal to another string, ignoring any changes in whitespace.
