@@ -47,19 +47,38 @@
 }
 
 
+- (void) testSuccessfulMatchDoesNotGenerateMismatchDescription
+{
+    assertNoMismatchDescription(hasCountOf(2), ([NSSet setWithObjects:@"a", @"b", nil]));
+}
+
+
+- (void) testMismatchDescriptionForItemWithWrongCount
+{
+    assertMismatchDescription(@"was <FakeWithCount> with count of <42>",
+                              hasCount(equalToUnsignedInteger(1)),
+                              [FakeWithCount fakeWithCount:42]);
+}
+
+
+- (void) testMismatchDescriptionForItemWithoutCount
+{
+    assertMismatchDescription(@"was <FakeWithoutCount>",
+                              hasCount(equalToUnsignedInteger(1)), [FakeWithoutCount fake]);
+}
+
+
 - (void) testDescribesMismatchForItemWithWrongCount
 {
     assertDescribeMismatch(@"was <FakeWithCount> with count of <42>",
-                           hasCount(equalToUnsignedInteger(1)),
-                           [FakeWithCount fakeWithCount:42]);
+                           hasCount(equalToUnsignedInteger(1)), [FakeWithCount fakeWithCount:42]);
 }
 
 
 - (void) testDescribesMismatchForItemWithoutCount
 {
     assertDescribeMismatch(@"was <FakeWithoutCount>",
-                           hasCount(equalToUnsignedInteger(1)),
-                           [FakeWithoutCount fake]);
+                           hasCount(equalToUnsignedInteger(1)), [FakeWithoutCount fake]);
 }
 
 @end
@@ -93,11 +112,23 @@
 }
 
 
+- (void) testMismatchDescriptionForItemWithWrongCount
+{
+    assertMismatchDescription(@"was <FakeWithCount> with count of <42>",
+                              hasCountOf(1), [FakeWithCount fakeWithCount:42]);
+}
+
+
+- (void) testMismatchDescriptionForItemWithoutCount
+{
+    assertMismatchDescription(@"was <FakeWithoutCount>", hasCountOf(1), [FakeWithoutCount fake]);
+}
+
+
 - (void) testDescribesMismatchForItemWithWrongCount
 {
     assertDescribeMismatch(@"was <FakeWithCount> with count of <42>",
-                           hasCountOf(1),
-                           [FakeWithCount fakeWithCount:42]);
+                           hasCountOf(1), [FakeWithCount fakeWithCount:42]);
 }
 
 
