@@ -5,61 +5,90 @@
 //  Created by: Jon Reid
 //
 
-    // Inherited
-#import "AbstractMatcherTest.h"
-
-    // OCHamcrest
+    // Class under test
 #define HC_SHORTHAND
-#import <OCHamcrest/HCAssertThat.h>
 #import <OCHamcrest/HCIsEqualIgnoringCase.h>
-#import <OCHamcrest/HCIsNot.h>
+
+    // Test support
+#import "AbstractMatcherTest.h"
 
 
 @interface IsEqualIgnoringCaseTest : AbstractMatcherTest
+{
+    id<HCMatcher> matcher;
+}
 @end
 
 @implementation IsEqualIgnoringCaseTest
 
+- (void) setUp
+{
+    matcher = [equalToIgnoringCase(@"heLLo") retain];
+}
+
+
+- (void) tearDown
+{
+    [matcher release];
+}
+
+
 - (id<HCMatcher>) createMatcher
 {
-    return equalToIgnoringCase(@"irrelevant");
+    return matcher;
 }
 
 
 - (void) testIgnoresCaseOfCharsInString
 {
-    assertThat(@"HELLO", equalToIgnoringCase(@"heLLo"));
-    assertThat(@"hello", equalToIgnoringCase(@"heLLo"));
-    assertThat(@"HelLo", equalToIgnoringCase(@"heLLo"));
-
-    assertThat(@"bye", isNot(equalToIgnoringCase(@"heLLo")));
+    assertMatches(@"all upper", matcher, @"HELLO");
+    assertMatches(@"all lower", matcher, @"hello");
+    assertMatches(@"mixed up", matcher, @"HelLo");
+    
+    assertDoesNotMatch(@"no match", matcher, @"bye");
 }
 
 
 - (void) testFailsIfAdditionalWhitespaceIsPresent
 {
-    assertThat(@"heLLo ", isNot(equalToIgnoringCase(@"heLLo")));
-    assertThat(@" heLLo", isNot(equalToIgnoringCase(@"heLLo")));
-}
-
-
-- (void) testFailsIfMatchingAgainstNil
-{
-    assertThat(nil, isNot(equalToIgnoringCase(@"heLLo")));
+    assertDoesNotMatch(@"whitespace suffix", matcher, @"heLLo ");
+    assertDoesNotMatch(@"whitespace prefix", matcher, @" heLLo");
 }
 
 
 - (void) testMatcherCreationRequiresNonNilArgument
-{    
-    STAssertThrows(equalToIgnoringCase(nil), @"should require non-nil argument");
+{
+    STAssertThrows(equalToIgnoringCase(nil), @"must not be nil");
+}
+
+
+- (void) testFailsIfMatchingAgainstNonString
+{
+    assertDoesNotMatch(@"non-string", matcher, [NSNumber numberWithInt:3]);
 }
 
 
 - (void) testHasAReadableDescription
 {
-    assertDescription(@"equalToIgnoringCase(\"heLLo\")",
-                      equalToIgnoringCase(@"heLLo"));
+    assertDescription(@"\"heLLo\" ignoring case", matcher);
 }
 
+
+- (void) testSuccessfulMatchDoesNotGenerateMismatchDescription
+{
+    assertNoMismatchDescription(matcher, @"hello");
+}
+
+
+- (void) testMismatchDescriptionShowsActualArgument
+{
+    assertMismatchDescription(@"was \"bad\"", matcher, @"bad");
+}
+
+
+- (void) testDescribeMismatch
+{
+    assertDescribeMismatch(@"was \"bad\"", matcher, @"bad");
+}
 
 @end
