@@ -23,6 +23,8 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 * Improved "lessThanOrEqualTo" description.
 
+* Improved "equalToIgnoringCase" and "equalToIgnoringWhitespace" descriptions.
+
 
 == Version 1.2 ==
 
